# foxglove

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  config-example.json  mozrun.py  pyproject.toml  requirements.txt  run.py  run.sh  setup.py  userChrome.css  userContent.css
.github/workflows/: ci.yml  publish.yml
foxglove/: __init__.py  addon-229918-latest.js  addons.txt  helper.py  prefs.js
foxglove/addon_prefs/: https-everywhere.js
tests/: test_foxglove.py
