[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foxglove"
version = "0.2.0"
description = "Firefox proxy profile manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Adam Reiser", email = "reiser@defensivecomputing.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["mozilla", "firefox", "proxy", "profile"]
dependencies = [
    "mozprofile>=2.0.0",
    "requests>=2.28.0",
]

[project.scripts]
foxglove = "foxglove:main"

[project.urls]
Homepage = "https://github.com/adamreiser/foxglove"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
foxglove = ["prefs.js"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
]

[tool.pytest.ini_options]
testpaths = ["tests"]
